# osc-github-devops-broken

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/actions/bump-semantic-tag/: action.yaml
.github/actions/file-sed-regex/: action.yaml
.github/actions/github-mandatory-labels/: action.yaml
.github/actions/github-mandatory-secrets/: action.yaml
.github/actions/github-repo-metadata/: action.yaml
.github/actions/github-workflow-metadata/: action.yaml
.github/actions/increment-semantic-tag/: action.yaml
.github/actions/latest-semantic-tag/: action.yaml
.github/actions/path-check/: action.yaml
.github/actions/python-build-action/: action.yaml
.github/actions/python-build-dyn-version/: action.yaml
.github/actions/python-build-package/: action.yaml
.github/actions/python-build-project/: action.yaml
.github/actions/python-dependencies-declared/: action.yaml
.github/actions/python-export-dependencies/: action.yaml
.github/actions/python-matrix-builds/: action.yaml
.github/actions/python-project-build/: action.yaml
.github/actions/python-project-name/: action.yaml
.github/actions/python-project-name-match-repo-name/: action.yaml
.github/actions/python-project-naming/: action.yaml
.github/actions/python-project-naming-match-repo/: action.yaml
.github/actions/python-project-update-version/: action.yaml
.github/actions/python-project-version/: action.yaml
.github/actions/python-project-version-vs-tag/: action.yaml
.github/actions/python-publish-package/: action.yaml
.github/actions/python-test-project/: action.yaml
.github/actions/python-twine-check/: action.yaml
.github/actions/python-update-dependencies/: action.yaml
.github/actions/python-versioning-dynamic/: action.yaml
.github/actions/python-versioning-patch/: action.yaml
.github/actions/python-versioning-type/: action.yaml
.github/actions/python-versions-matrix/: action.yaml
.github/actions/repository-classify-content/: action.yaml
.github/actions/repository-content-classify/: action.yaml
.github/actions/repository-tags/: action.yaml
.github/actions/repository-tags-fetch/: action.yaml
.github/actions/semantic-tag-build/: action.yaml
.github/actions/semantic-tag-current/: action.yaml
.github/actions/semantic-tag-development/: action.yaml
.github/actions/semantic-tag-fetch/: action.yaml
.github/actions/semantic-tag-increment/: action.previous.yaml  action.yaml
.github/actions/semantic-tag-latest/: action.yaml
.github/actions/semantic-tag-production/: action.yaml
.github/actions/semantic-tag-validate/: action.yaml
.github/actions/string-comparison/: action.yaml
.github/actions/string-extract-with-regex/: action.yaml
.github/actions/string-in-multiline-text/: action.yaml
.github/actions/tox-parse-stanza/: action.yaml
.github/actions/twine-check-artefacts/: action.yaml
.github/actions/url-validity-check/: action.yaml
.github/actions/workflow-capture-metadata/: action.yaml
.github/actions/workflow-metadata/: action.yaml
.github/python-build-action/: action.yaml
.github/workflows/: actions.yaml  builds.yaml  codeql.yaml  codeql.yml  dependencies.yaml  documentation.yaml  github-release.yaml  linting.yaml  one-password-credentials.yaml  pyproject-toml-fetch-matrix.yaml  pyproject-toml-fetch-versions.yaml  python-build-matrix.yaml  python-dependencies-reusable.yaml  python-dependencies.yaml  python-matrix-build.yaml  python-project-setup.yaml  python-test-matrix.yaml  release.yaml  repository.yaml  tagging.yaml  tags-pushed.yaml  tags-verify.yaml  test-actions.yaml  test-gha-workflows.yaml  testing.yaml  tox.yaml
docs/: README.md
notebooks/: test.ipynb
resources/: setup.py  test-invalid-symlink
scripts/: test.sh
src/: __init__.py
src/devops_reusable_workflows/: __init__.py  cli.py
src/osc_github_devops/: __init__.py  cli.py  sample.ipynb  test.sh
tests/: conftest.py  test_cli.py  test_sample.ipynb
tests/twine/: devops_reusable_workflows-0.0.1.tar.gz.license
